--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -22,7 +22,7 @@
     },
     "host": {
       "cors": {
-        "origins": [],
+        "origins": ["http://localhost:5173/", "http://localhost:4280"],
         "allow-credentials": false
       },
       "authentication": {
